test/files/neg/nullary-override.check
nullary-override.scala:4: warning: non-nullary method overrides nullary method
class B extends A { override def x(): Int = 4 }
                                 ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
